# summer-practice-2026

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: main.cpp
src/core/: app_state.h  input.cpp  input.h  lighting.h  memory.h  settings.h  types.h
src/game/: combat.cpp  combat.h  enemy.cpp  enemy.h  grass.cpp  grass.h  item_drop.cpp  item_drop.h  lighting.cpp  lighting.h  player.cpp  player.h  room.h  spore.cpp  spore.h  tilemap.cpp  tilemap.h  torch.cpp  torch.h  traps.cpp  traps.h
src/game/actor/: combat.cpp  combat.h  enemy.cpp  enemy.h  player.cpp  player.h  spore.cpp  spore.h
src/game/state/: game_state.h  init_game_state.cpp
src/game/world/: grass.cpp  grass.h  item_drop.cpp  item_drop.h  lighting.cpp  physics_tile.cpp  physics_tile.h  stones.cpp  stones.h  tilemap.cpp  tilemap.h  torch.cpp  torch.h  traps.cpp  traps.h
src/levels/: level_data.h  screen_01.cpp  screen_01.h
src/render/: lighting_draw.cpp  renderer.cpp  renderer.h  sprites.h  tilemap_draw.cpp
src/render/core/: renderer.cpp  renderer.h  resources.h  sprites.h
src/render/effects/: lighting.h  lighting_draw.cpp
src/render/entity/: enemy_sprite_draw.cpp  hero_draw.cpp  item_sprite_draw.cpp  torch_draw.cpp
src/render/ui/: text_draw.cpp  ui_draw.cpp
src/render/world/: background_draw.cpp  grass_draw.cpp  (+1 more)
src/screens/: game_screen.cpp  game_screen.h  hud.cpp  hud.h  loading_screen.cpp  loading_screen.h  menu_screen.cpp  menu_screen.h  pause_screen.cpp  pause_screen.h  settings_screen.cpp  settings_screen.h  transition.cpp  transition.h
(+18 files in other folders)
